<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestsActivity"
    android:background="#E7E7E7">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account_image"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/logo"
        app:civ_border_width="0.8dp"
        app:civ_border_color="#511010"

        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/register_first_name"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/register_change_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siren_emergency_app"
        android:textColor="#BC4343"


        app:layout_constraintTop_toBottomOf="@id/account_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:clickable="true"
        android:focusable="true"
        />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/edit_first_name_section"
        android:singleLine="true"

        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_image"
        app:layout_constraintBottom_toTopOf="@id/register_last_name"

        android:hint="@string/first_name"
        android:paddingLeft="100dp"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/edit_last_name_section"
        android:singleLine="true"

        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_first_name"
        app:layout_constraintBottom_toTopOf="@id/register_phone_number"

        android:hint="@string/last_name"
        android:paddingLeft="100dp"


        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/phone_number_reg"
        android:singleLine="true"

        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_last_name"
        app:layout_constraintBottom_toTopOf="@id/register_email"

        android:hint="@string/phone_number"
        android:paddingLeft="130dp"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/email_reg"
        android:singleLine="true"

        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_number"
        app:layout_constraintBottom_toTopOf="@id/register_password"

        android:paddingLeft="130dp"
        android:hint="em@xxx.com"
        android:textAlignment="center"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/password_reg"
        android:singleLine="true"
        android:inputType="textPassword"
        android:gravity="center"

        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"


        android:hint="*********"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        app:layout_constraintBottom_toTopOf="@+id/register_save_button"/>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/register_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/sign_up_red"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        />

    <include layout="@layout/register_toolbar"
        android:id="@+id/toolbar"
        />

</android.support.constraint.ConstraintLayout>